--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,20 @@
 body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  font-family: 'Arial', sans-serif;
 }
 
-a {
-  color: #00B7FF;
+h1 {
+  font-weight: bold;
+}
+
+p {
+  font-size: 1.1rem;
+  line-height: 1.6;
+}
+
+footer {
+  border-top: 3px solid #000;
+}
+
+img.shadow {
+  box-shadow: 0 4px 8px rgba(0,0,0,0.2);
 }
