--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <title><%= title || "My Portfolio" %></title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
-<body class="bg-light">
+<body class="bg-light d-flex flex-column min-vh-100">
 
     <nav class="navbar navbar-dark bg-dark px-3">
         <a class="navbar-brand" href="/">My Portfolio</a>
@@ -17,13 +19,14 @@
         </div>
     </nav>
 
-    <div class="container mt-5">
+    <div class="container flex-grow-1 d-flex justify-content-center align-items-center">
         <%- body %>
     </div>
 
-    <footer class="text-center mt-5 py-3 text-secondary">
+    <footer class="text-center py-3 text-light mt-auto bg-dark border-top border-black">
         © 2025 Rajveer Singh
     </footer>
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
