--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -1,4 +1,52 @@
-<% layout('layout') %>
+<div class="text-center p-4">
 
-<h1>Projects</h1>
-<p>List your projects here with links or images.</p>
+    <h1 class="mb-4">My Projects</h1>
+    <p class="lead mb-5">Here are some of the projects I have worked on.</p>
+
+    <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+
+        <!-- Project Card 1 -->
+        <div class="col">
+            <div class="card h-100 shadow-sm">
+                <img src="/images/code.avif" class="card-img-top" alt="Project 1">
+                <div class="card-body">
+                    <h5 class="card-title">Project One</h5>
+                    <p class="card-text">My coding Assignment</p>
+                </div>
+                <div class="card-footer text-center">
+                    <a href="/project1" class="btn btn-primary btn-sm">View Project</a>
+                </div>
+            </div>
+        </div>
+
+        <!-- Project Card 2 -->
+        <div class="col">
+            <div class="card h-100 shadow-sm">
+                <img src="/images/code2.jpg" class="card-img-top" alt="Project 2">
+                <div class="card-body">
+                    <h5 class="card-title">Project Two</h5>
+                    <p class="card-text">coding a game</p>
+                </div>
+                <div class="card-footer text-center">
+                    <a href="/project2" class="btn btn-primary btn-sm">View Project</a>
+                </div>
+            </div>
+        </div>
+
+        <!-- Project Card 3 -->
+        <div class="col">
+            <div class="card h-100 shadow-sm">
+                <img src="/images/code3.jpg" class="card-img-top" alt="Project 3">
+                <div class="card-body">
+                    <h5 class="card-title">Project Three</h5>
+                    <p class="card-text">Learning Java</p>
+                </div>
+                <div class="card-footer text-center">
+                    <a href="/project3" class="btn btn-primary btn-sm">View Project</a>
+                </div>
+            </div>
+        </div>
+
+    </div>
+
+</div>
